--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -79,7 +79,7 @@ h6 {
   height: auto;
   padding-top: 8rem;
   padding-bottom: 8rem;
-  background-color: #ecb807;
+  background-image: url('../img/mastbg.jpg');
 }
 
 .masthead h1 {
