added style and logic for inner a tag on projects

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -229,6 +229,10 @@ h6 {
   font-size: 0.8rem;
   text-transform: uppercase;
 }
+.portfolio-item .caption .caption-content .inner {
+  font-size: 0.8rem;
+  text-transform: uppercase;
+}
 
 .portfolio-item .caption .caption-content p {
   font-weight: 300;
